# PongThreading

./: CMakeLists.txt  PongThreading.sln  README.md  ball_test.cpp  paddle_test.cpp
PingPongGame/: PingPongGame.sln
PingPongGame/PingPongGame/: PingPongGame.vcxproj  PingPongGame.vcxproj.filters  ball.cpp  ball.h  game.cpp  game.h  main.cpp  paddle.cpp  paddle.h
PingPongGame/PingPongGame/x64/Debug/: PingPongGame.exe.recipe  PingPongGame.ilk  vc143.idb
PingPongGame/PingPongGame/x64/Debug/PingPongGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PingPongGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PongThreading/: BallLogic.cpp  BallLogic.h  PaddleLogic.cpp  PaddleLogic.h  PongThreading.vcxproj  PongThreading.vcxproj.filters  ball.cpp  ball.h  game.cpp  game.h  main.cpp  paddle.cpp  paddle.h
PongThreading/x64/Debug/: PongThreading.exe.recipe  PongThreading.ilk  vc143.idb
PongThreading/x64/Debug/PongThreading.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PongThreading.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
